--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: minimal
 dist: trusty
 
 addons:
@@ -30,7 +31,7 @@ addons:
 before_install:
   - wget https://github.com/bazelbuild/bazel/releases/download/0.14.1/bazel-0.14.1-installer-linux-x86_64.sh 
   - chmod +x bazel-0.14.1-installer-linux-x86_64.sh
-  - ./bazel-0.14.1-installer-linux-x86_64.sh
+  - ./bazel-0.14.1-installer-linux-x86_64.sh --user
 
 script:
   - bazel test //src/...
